--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ TODO
 - Remove routes links from pokemonview page and control with buttons
 - Loading screen/light and error screen/light on index scree
 - Loading screen/light and error screen/light on pokemonview
+- Make a redirect for router if a pokemon is above /150 + entered manually in the URL
 - Move actions and state to Vuex store
 - Store results in localstorage as user browses through pages and pokemon
 
